--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "async": "2.1.4",
+    "d3": "^5.7.0",
+    "d3-node": "^2.1.0",
+    "dotenv": "4.0.0",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
-    "twig": "0.10.3",
+    "semantic-ui": "^2.4.2",
     "stylus": "0.54.5",
-    "dotenv": "4.0.0",
-    "async": "2.1.4"
+    "twig": "0.10.3"
   },
   "devDependencies": {
     "eslint": "3.15.0",
